converted posts page to flexbox columns, but now the footer is floating behind them. need to fix that

--- a/_sass/components/_section.scss
+++ b/_sass/components/_section.scss
@@ -21,6 +21,7 @@ header {
         width: max-content;
         max-width: 100%;
         margin-bottom: _size(element-margin);
+        padding: 16px;
         > :first-child {
             margin-bottom: 0;
             width: calc(100% + 0.5em);
